objects/Approval_Matrix_Element__c.object
<CustomObject>
    <description>Object to store the Approval Matrix detail information</description>
    <fields>
        <fullName>Approval_Matrix__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approval Matrix</label>
        <referenceTo>Approval_Matrix__c</referenceTo>
        <relationshipName>Approval_Matrix_Detail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <label>Field API Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Match_Type__c</fullName>
        <inlineHelpText>For Data Types BOOLEAN, INTEGER  use &apos;Equals&apos;
For Data Types STRING, PICKLIST, MULTIPICKLIST use &apos;Contains&apos; or &apos;Starts With&apos;
For Data Types CURRENCY use &apos;Range&apos;</inlineHelpText>
        <label>Match Type</label>
        <picklist>
            <picklistValues>
                <fullName>Equals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Range</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contains</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Starts With</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Object_Name_Field_Name__c</fullName>
        <label>Object Name Field Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <picklist>
            <picklistValues>
                <fullName>Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval__c</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Value_Max__c</fullName>
        <label>Value Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value_Min__c</fullName>
        <label>Value Min</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>field_data_type__c</fullName>
        <label>field data type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Approval Matrix Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MD-{00000000}</displayFormat>
        <label>Matrix Detail</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Matrix Item</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Match_Type_Validation</fullName>
        <active>true</active>
        <description>validation on Match Type field based on the Field Data Type value</description>
        <errorConditionFormula>IF(OR(
 AND( field_data_type__c == &apos;BOOLEAN&apos;, TEXT(Match_Type__c) &lt;&gt; &apos;Equals&apos;), 
 AND(field_data_type__c == &apos;INTEGER&apos;, TEXT(Match_Type__c) &lt;&gt; &apos;Equals&apos;),
 AND(field_data_type__c == &apos;STRING&apos;, AND(TEXT(Match_Type__c) &lt;&gt; &apos;Contains&apos;,TEXT(Match_Type__c) &lt;&gt; &apos;Starts With&apos;,TEXT(Match_Type__c) &lt;&gt; &apos;Equals&apos;)),
 AND(field_data_type__c == &apos;PICKLIST&apos;, AND(TEXT(Match_Type__c) &lt;&gt; &apos;Contains&apos;,TEXT(Match_Type__c) &lt;&gt; &apos;Starts With&apos;,TEXT(Match_Type__c) &lt;&gt; &apos;Equals&apos;)),
 AND(field_data_type__c == &apos;MULTIPICKLIST&apos;, AND(TEXT(Match_Type__c) &lt;&gt; &apos;Contains&apos;,TEXT(Match_Type__c) &lt;&gt; &apos;Starts With&apos;,TEXT(Match_Type__c) &lt;&gt; &apos;Equals&apos;)),
 AND(field_data_type__c == &apos;CURRENCY&apos;, TEXT(Match_Type__c) &lt;&gt; &apos;Range&apos;),
 AND(field_data_type__c == &apos;PERCENT&apos;, TEXT(Match_Type__c) &lt;&gt; &apos;Range&apos;))
 , true, false)</errorConditionFormula>
        <errorDisplayField>Match_Type__c</errorDisplayField>
        <errorMessage>Match Type selected is not supported for selected field</errorMessage>
    </validationRules>
</CustomObject>